Increased the zone token width to prevent wrapping of the text

--- a/ui/cloudkit/css/main.css
+++ b/ui/cloudkit/css/main.css
@@ -1153,7 +1153,7 @@ a:hover {
 }
 
 .db_downlaodbox p{
-	width:400px;
+	width:500px;
 	height:auto;
 	float:left;
 	color:#666;
